Removing Bank API
