# api/routers/index.js
@@ -1,7 +1,5 @@
 const { Router } = require('express');
-const banks = require('./banks');
 const accounts = require('./accounts');
-const transactions = require('./transactions');
 const env = require('dotenv').config();
 
 module.exports = ({ config }) => {
@@ -17,13 +15,7 @@ module.exports = ({ config }) => {
 
   const v1 = Router();
 
-  v1.use('/banks', banks({ config }));
-
-  if (env.parsed.NODE_ENV == 'development') {
-    v1.use('/accounts', accounts({ config }));
-  }
-
-  v1.use('/transactions', transactions({ config }));
+  v1.use('/accounts', accounts({ config }));
 
   api.use('/v1', v1);
 
